<?xml version="1.0"?>
<package>
  <name>robot1_description</name>
  <version>0.0.0</version>
  <description>The robot1_description package</description>

  <maintainer email="xavier@inegocis.com">Xavier Blasco</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/xavierblasco/robot1/robot1_description</url>

  <author email="xavier@inegocis.com">Xavier Blasco</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
